2010-10-01  Sam Weinig  <sam@webkit.org>

        Reviewed by Adam Roben.

        Remove unnecessary ForwardingHeaders from test runners.
        https://bugs.webkit.org/show_bug.cgi?id=47010

        * TestWebKitAPI/Configurations/Base.xcconfig:
        * TestWebKitAPI/ForwardingHeaders: Removed.
        * WebKitTestRunner/Configurations/Base.xcconfig:
        * WebKitTestRunner/ForwardingHeaders: Removed.

2010-09-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        WebSocket tests are flaky
        https://bugs.webkit.org/show_bug.cgi?id=46956

        Update these tools to understand how to run the WebSocket tests off the
        Apache server.

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/websocket_server.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:

2010-10-01  Adam Roben  <aroben@apple.com>

        Encode Executive command arguments using UTF-8 on Cygwin

        Cygwin's Python's os.execv doesn't support unicode command arguments.
        Cygwin's execv expects arguments to be encoded using the current code
        page. But code pages are limited in what characters they can handle,
        and our tests include characters that the English code page can't
        handle.  So for now we'll just encode everything in UTF-8 on Cygwin,
        which can handle all characters but might confuse some commands, for
        expediency's sake. I'm sure we'll run into cases where UTF-8 isn't
        good enough, but we can deal with that when the problem arises.

        Reviewed by Adam Barth.

        Fixes <http://webkit.org/b/46892> <rdar://problem/8496639>
        webkitpy.common.system.executive_unittest.ExecutiveTest.test_run_command_with_unicode
        fails on Windows

        * Scripts/webkitpy/common/system/executive.py:
        (Executive._run_command_with_teed_output):
        (Executive.run_command):